plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.controltower'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	mapstructVersion      = '1.6.3'
	jjwtVersion           = '0.12.6'
	stripeVersion         = '26.12.0'
	testcontainersVersion = '1.20.4'
	googleApiClientVersion = '2.20.0'
}

dependencies {
	// ── Spring Boot Starters ─────────────────────────────────────────
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// ── Rate Limiting ────────────────────────────────────────────────
	implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:8.0.1'

	// ── TOTP / 2FA ──────────────────────────────────────────────────
	implementation 'com.warrenstrange:googleauth:1.5.0'
	// googleauth pulls httpclient 4.5.12 transitively; pin to patched version.
	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.aspectj:aspectjweaver'

	// ── Database ─────────────────────────────────────────────────────
	implementation 'org.flywaydb:flyway-database-postgresql'
	runtimeOnly    'org.postgresql:postgresql'

	// ── JWT ──────────────────────────────────────────────────────────
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly    "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly    "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"

	// ── MapStruct ────────────────────────────────────────────────────
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"

	// ── Spring Modulith ──────────────────────────────────────────────
	implementation 'org.springframework.modulith:spring-modulith-starter-core:2.0.0'

	// ── OpenAPI / Swagger UI ─────────────────────────────────────────
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

	// ── Stripe ───────────────────────────────────────────────────────
	implementation "com.stripe:stripe-java:${stripeVersion}"
	implementation 'com.google.code.gson:gson:2.11.0'

	// ── Google Calendar API ────────────────────────────────────────────
	implementation 'com.google.apis:google-api-services-calendar:v3-rev20241101-2.0.0'
	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.39.0'
	implementation 'com.google.http-client:google-http-client-gson:1.43.0'

	// ── PDF Generation ───────────────────────────────────────────────
	implementation 'com.github.librepdf:openpdf:1.3.30'

	// ── Observability ────────────────────────────────────────────────
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

	// ── Lombok ───────────────────────────────────────────────────────
	compileOnly 'org.projectlombok:lombok'

	// ── Annotation Processors (order matters: mapstruct before lombok) ─
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// ── Tests ────────────────────────────────────────────────────────
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation "org.testcontainers:junit-jupiter:${testcontainersVersion}"
	testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
	testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

// ── Packaging ────────────────────────────────────────────────────────────────
// Disable the plain jar task so only the executable bootJar is produced.
// This prevents COPY *.jar ambiguity in Dockerfile.
tasks.named('jar') {
	enabled = false
}

// Name the executable JAR consistently so Dockerfile doesn't rely on version strings.
tasks.named('bootJar') {
	archiveFileName = 'app.jar'
}
